--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ rvm:
   - 1.9.2
   - 1.9.3
   - jruby
+bundler_args: --without development
 before_script:
   - 'RAILS_ENV=test bundle exec rake db:create db:schema:load --trace'
 notifications:
