--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 rvm:
-  - 1.9.2
   - 1.9.3
 bundler_args: --without development
+before_install: gem install bundler --pre
 notifications:
   irc: "irc.freenode.org#travis"
