--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,4 @@ sudo: false
 
 cache: bundler
 
-bundler_args: --without development
-
-notifications:
-  irc: "irc.freenode.org#travis"
+bundler_args: --without development --jobs 3 --retry 3 --deployment
