--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,5 @@ sudo: false
 cache: bundler
 
 bundler_args: --without development --jobs 3 --retry 3 --deployment
+
+script: bundle exec rspec spec
