--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,6 @@ cache: bundler
 
 bundler_args: --without development --jobs 3 --retry 3 --deployment
 
+before_install: gem install bundler
+
 script: bundle exec rspec spec
