--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ rvm: 2.5.1
 services:
   - redis
 
-sudo: false
+sudo: required
 
 cache: bundler
 
@@ -13,4 +13,5 @@ bundler_args: --without development --jobs 3 --retry 3 --deployment
 
 before_install: gem install bundler
 
-script: bundle exec rspec spec
+script: bundle exec rspec spec && ./script/docker-build-and-push
+
