--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: ruby
+dist: bionic
 
-rvm: 2.5.1
+rvm: 2.6.3
 
 services:
   - redis
@@ -14,3 +15,10 @@ bundler_args: --without development --jobs 3 --retry 3 --deployment
 before_install: gem install bundler
 
 script: bundle exec rspec spec
+
+jobs:
+  include:
+    - stage: "rspec"
+      script: bundle exec rspec spec
+    - stage: ":ship: it"
+      script: make ship
