--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 dist: bionic
 
-rvm: 2.5.8
+rvm: 2.7.5
 
 services:
   - redis
@@ -17,6 +17,8 @@ bundler_args: --without development --jobs 3 --retry 3 --deployment
 jobs:
   include:
     - stage: "rspec"
+      before_install:
+        - gem install bundler:1.17.3
       script: bundle exec rspec spec
     - stage: ":ship: it"
       addons:
