--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: ruby
 dist: bionic
+group: edge
 
 rvm: 3.2.2
 
@@ -21,3 +22,6 @@ jobs:
   include:
     - stage: "rspec"
       script: bundle exec rspec spec
+    - stage: ":ship: it"
+      script: make ship
+      if: (branch = master and type = push ) OR commit_message =~ /ship:docker/ OR env(SHIP_DOCKER) = true
